sandbox/output
ParserWithDelimiterNewLineOrComma.java:1: error: ParserWithDelimiterNewLineOrComma is not abstract and does not override abstract method parse(String) in StringCalculatorParser
public class ParserWithDelimiterNewLineOrComma implements StringCalculatorParser {
       ^
StringCalculatorTest.java:8: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(0, StringCalculator.add(""));
                                        ^
  required: String,StringCalculatorParser
  found: String
  reason: actual and formal argument lists differ in length
2 errors
